Primera versión del cotizador Heka
